tests/ui/const-generics/min_adt_const_params/forbid-non_exhaustive-const-param-ty.min.stderr
error: the trait `ConstParamTy` may not be implemented for this type
  --> $DIR/forbid-non_exhaustive-const-param-ty.rs:13:12
   |
LL | #[non_exhaustive]
   | ----------------- caused by this attribute
LL | #[derive(PartialEq, Eq, ConstParamTy)]
   |                         ------------ in this derive macro expansion
LL | pub struct Miow;
   |            ^^^^ non exhaustive const params are forbidden

error: the trait `ConstParamTy` may not be implemented for this type
  --> $DIR/forbid-non_exhaustive-const-param-ty.rs:17:10
   |
LL | #[derive(PartialEq, Eq, ConstParamTy)]
   |                         ------------ in this derive macro expansion
LL | pub enum Enumiow {
   |          ^^^^^^^ non exhaustive const params are forbidden
LL |
LL |     #[non_exhaustive] NonExhaustiveThingie,
   |     ----------------- caused by this attribute

error: aborting due to 2 previous errors

